[package]
name = "armp-sdk"
version = "0.1.0"
edition = "2021"
description = "ARMP (Agent Real-time Message Protocol) Rust SDK — real-time agent communication via Matrix"
license = "Apache-2.0"
repository = "https://github.com/agentcountry/armp-protocol"
keywords = ["armp", "agent", "matrix", "real-time", "communication"]
categories = ["network-programming", "api-bindings"]

[dependencies]
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "experimental-timeline"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
